--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="LittleEngine.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Globals.h" />
     <ClInclude Include="LittleEngine.h" />
     <ClInclude Include="Module.h" />
+    <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="ShaderProgram.h" />
