--- a/LittleEngine/LittleEngine/Engine/imgui.ini
+++ b/LittleEngine/LittleEngine/Engine/imgui.ini
@@ -1,10 +1,20 @@
 [Window][Debug##Default]
-Pos=10,101
-Size=1716,419
+Pos=-1,474
+Size=804,126
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=115,72
 Size=550,765
+Collapsed=0
+
+[Window][LittleEngine Console]
+Pos=-1,441
+Size=320,158
+Collapsed=0
+
+[Window][Map editor]
+Pos=60,60
+Size=496,404
 Collapsed=0
 
