--- a/LittleEngine/LittleEngine/Engine/imgui.ini
+++ b/LittleEngine/LittleEngine/Engine/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=-1,474
+Pos=-24,451
 Size=804,126
 Collapsed=0
 
@@ -16,5 +16,10 @@ Collapsed=0
 [Window][Map editor]
 Pos=60,60
 Size=496,404
+Collapsed=0
+
+[Window][window]
+Pos=60,60
+Size=268,175
 Collapsed=0
 
