--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Components\Mesh.cpp" />
     <ClCompile Include="Components\Transform.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -183,6 +184,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\Component.h" />
+    <ClInclude Include="Components\Mesh.h" />
     <ClInclude Include="Components\Transform.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="imgui\imconfig.h" />
