--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Components">
       <UniqueIdentifier>{05d19784-848b-4b19-aa80-0db284c9934c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Utils">
+      <UniqueIdentifier>{7c4ee385-e58c-4f8b-b41d-eeff00275176}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LittleEngine.cpp">
@@ -95,6 +98,12 @@
     </ClCompile>
     <ClCompile Include="Entity.cpp">
       <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\MsTimer.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\MicroTimer.cpp">
+      <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +187,12 @@
     </ClInclude>
     <ClInclude Include="Entity.h">
       <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\MsTimer.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\MicroTimer.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
