Add module time controller

--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="Utils\MicroTimer.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleTimeController.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LittleEngine.h">
@@ -193,6 +196,9 @@
     </ClInclude>
     <ClInclude Include="Utils\MicroTimer.h">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleTimeController.h">
+      <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
