--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
@@ -200,6 +200,9 @@
     <ClInclude Include="ModuleTimeController.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\Timer.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\fragmentShader.frag">
