--- a/LittleEngine/LittleEngine/Engine/imgui.ini
+++ b/LittleEngine/LittleEngine/Engine/imgui.ini
@@ -29,7 +29,17 @@ Size=326,253
 Collapsed=0
 
 [Window][Debug]
-Pos=416,201
+Pos=-74,207
 Size=697,523
+Collapsed=0
+
+[Window][About]
+Pos=60,60
+Size=226,167
+Collapsed=0
+
+[Window][Time Control]
+Pos=60,60
+Size=208,129
 Collapsed=0
 
