--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Components\Mesh.cpp" />
+    <ClCompile Include="Components\Model.cpp" />
     <ClCompile Include="Components\Transform.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Global.cpp" />
@@ -190,6 +191,7 @@
   <ItemGroup>
     <ClInclude Include="Components\Component.h" />
     <ClInclude Include="Components\Mesh.h" />
+    <ClInclude Include="Components\Model.h" />
     <ClInclude Include="Components\Transform.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Globals.h" />
