--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="UI\UI.cpp" />
     <ClCompile Include="Utils\MicroTimer.cpp" />
     <ClCompile Include="Utils\MsTimer.cpp" />
+    <ClCompile Include="Utils\SystemProperties.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\Component.h" />
@@ -218,6 +219,7 @@
     <ClInclude Include="UI\UI.h" />
     <ClInclude Include="Utils\MicroTimer.h" />
     <ClInclude Include="Utils\MsTimer.h" />
+    <ClInclude Include="Utils\SystemProperties.h" />
     <ClInclude Include="Utils\Timer.h" />
   </ItemGroup>
   <ItemGroup>
