--- a/LittleEngine/LittleEngine/Engine/imgui.ini
+++ b/LittleEngine/LittleEngine/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=343,172
-Size=804,339
+Pos=281,155
+Size=398,358
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -29,22 +29,27 @@ Size=326,253
 Collapsed=0
 
 [Window][Debug]
-Pos=405,160
-Size=697,253
+Pos=30,328
+Size=673,125
 Collapsed=0
 
 [Window][About]
-Pos=86,56
+Pos=168,94
 Size=372,272
 Collapsed=0
 
 [Window][Time Control]
-Pos=464,395
-Size=505,128
+Pos=544,321
+Size=247,235
 Collapsed=0
 
 [Window][Configuration]
-Pos=33,111
-Size=484,433
+Pos=320,138
+Size=495,556
+Collapsed=0
+
+[Window][Model properties]
+Pos=546,17
+Size=250,304
 Collapsed=0
 
