--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="ModuleTimeController.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="ModuleProgram.cpp" />
+    <ClCompile Include="UI\PropertiesUI.cpp" />
     <ClCompile Include="UI\UI.cpp" />
     <ClCompile Include="Utils\MicroTimer.cpp" />
     <ClCompile Include="Utils\MsTimer.cpp" />
