--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="Utils\SystemProperties.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="UI\PropertiesUI.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LittleEngine.h">
