--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="Components\Component.h" />
     <ClInclude Include="Components\Mesh.h" />
     <ClInclude Include="Components\Model.h" />
+    <ClInclude Include="Components\Texture.h" />
     <ClInclude Include="Components\Transform.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Globals.h" />
