--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -161,7 +161,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Components\Mesh.cpp" />
-    <ClCompile Include="Components\Model.cpp" />
+    <ClCompile Include="Components\Collider.cpp" />
     <ClCompile Include="Components\Transform.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Global.cpp" />
@@ -195,7 +195,7 @@
   <ItemGroup>
     <ClInclude Include="Components\Component.h" />
     <ClInclude Include="Components\Mesh.h" />
-    <ClInclude Include="Components\Model.h" />
+    <ClInclude Include="Components\Collider.h" />
     <ClInclude Include="Components\Texture.h" />
     <ClInclude Include="Components\Transform.h" />
     <ClInclude Include="GameObject.h" />
