--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="ModuleProgram.cpp" />
     <ClCompile Include="UI\HierarchyPanel.cpp" />
+    <ClCompile Include="UI\InspectorPanel.cpp" />
     <ClCompile Include="UI\PropertiesUI.cpp" />
     <ClCompile Include="UI\UI.cpp" />
     <ClCompile Include="Utils\MicroTimer.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="ModuleProgram.h" />
     <ClInclude Include="UI\HierarchyPanel.h" />
+    <ClInclude Include="UI\InspectorPanel.h" />
     <ClInclude Include="UI\UI.h" />
     <ClInclude Include="UI\PropertiesUI.h" />
     <ClInclude Include="Utils\MicroTimer.h" />
