Add more ui functionalities to inspector

--- a/LittleEngine/LittleEngine/Engine/imgui.ini
+++ b/LittleEngine/LittleEngine/Engine/imgui.ini
@@ -4,8 +4,8 @@ Size=398,358
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1260,93
-Size=550,761
+Pos=630,98
+Size=550,758
 Collapsed=0
 
 [Window][LittleEngine Console]
@@ -54,7 +54,12 @@ Size=451,671
 Collapsed=0
 
 [Window][Hierarchy Panel]
-Pos=28,43
+Pos=29,42
 Size=287,938
+Collapsed=0
+
+[Window][Inspector]
+Pos=1397,99
+Size=503,855
 Collapsed=0
 
