--- a/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
+++ b/LittleEngine/LittleEngine/LittleEngine.vcxproj.filters
@@ -244,16 +244,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Engine\fragmentShader.frag">
+    <None Include="Engine\shaders\gridShader.frag">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Engine\vertexShader.vert">
+    <None Include="Engine\shaders\gridShader.vert">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Engine\gridShader.frag">
+    <None Include="Engine\shaders\vertexShader.vert">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Engine\gridShader.vert">
+    <None Include="Engine\shaders\fragmentShader.frag">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
